# siberrag

./: .env.example  .gitignore  README.md  pyproject.toml  start.md
config/: config.yaml
docs/: USAGE.md  architecture.md
examples/: novel.txt  sample_regulasi.md
siberrag_api/: __init__.py  app.py
siberrag_cli/: __init__.py  display.py  main.py
siberrag_core/: __init__.py  config.py  index_pipeline.py  pipeline.py  query_pipeline.py
siberrag_core/chunker/: __init__.py  chunker.py  tokenizer.py
siberrag_core/cleaners/: __init__.py  base.py  cleaner.py  rules.py
siberrag_core/embeddings/: __init__.py  base.py  local.py  openai_emb.py  registry.py
siberrag_core/exporters/: __init__.py  base.py  json_exporter.py  jsonl_exporter.py  markdown_exporter.py  registry.py
siberrag_core/generation/: __init__.py  base.py  local_llm.py  openai_llm.py  prompts.py  registry.py
siberrag_core/hierarchy/: __init__.py  builder.py
siberrag_core/metadata/: __init__.py  builder.py
siberrag_core/models/: __init__.py  blocks.py  chunk.py  elements.py  validation.py
siberrag_core/parsers/: __init__.py  _helpers.py  base.py  csv_parser.py  detector.py  docling_parser.py  docx_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py  registry.py  txt_parser.py  xlsx_parser.py
siberrag_core/retrieval/: __init__.py  retriever.py
siberrag_core/semantic/: __init__.py  builder.py
siberrag_core/utils/: __init__.py  env.py  ids.py  language.py  logging.py  text.py  tokens.py
siberrag_core/validator/: __init__.py  checks.py  validator.py
siberrag_core/vectorstore/: __init__.py  base.py  chroma_store.py  registry.py
siberrag_ui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_chunker.py  test_cleaners.py  test_config.py  test_embeddings.py  test_exporters.py  test_generation.py  test_hierarchy.py  test_parsers.py  test_pipeline.py  test_retrieval.py  test_text_utils.py  test_tokens.py  test_v2_config.py  test_v2_pipeline.py  test_validators.py  test_vectorstore.py
