[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siberrag"
version = "1.0.0"
description = "SiberRAG - Document Preprocessing Engine untuk menghasilkan semantic chunk berkualitas tinggi untuk RAG."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SiberRAG" }]
keywords = ["rag", "chunking", "document-processing", "semantic", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Core dependencies (selalu terpasang)
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Parser utama (opsional); bila tidak ada, registry otomatis fallback ke native parser
docling = ["docling>=2.5.0"]
# Deteksi bahasa untuk metadata (opsional); bila tidak ada, fallback heuristik
langdetect = ["langdetect>=1.0.9"]

# v2 - RAG
# Embedding lokal (sentence-transformers/BGE-m3) + vector DB (ChromaDB)
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.41.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
]
# Embedding + LLM via OpenAI API (OpenAI-compatible endpoint)
rag-openai = ["openai>=1.30.0"]
# REST API server
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "python-multipart>=0.0.9"]
# Web UI chat interface
ui = ["gradio>=4.20.0"]
# Meta: semua RAG capability sekaligus
all = ["siberrag[rag,rag-openai,api,ui]"]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
siberrag = "siberrag_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["siberrag_core*", "siberrag_cli*", "siberrag_api*", "siberrag_ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
